add SignalR library for real-time communication

--- a/RealTimeForum/package.json
+++ b/RealTimeForum/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.0",
     "@ckeditor/ckeditor5-angular": "^9.0.0",
     "@ckeditor/ckeditor5-build-classic": "^43.2.0",
+    "@microsoft/signalr": "^8.0.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
