--- a/Back/appsettings.json
+++ b/Back/appsettings.json
@@ -6,13 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=Forum;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
-  
   "Jwt": {
-    "Key": "3tF9JbZ7uLcN8WvX5qDfRgHkYrTpLjKx85tdhfvdd45f",  
+    "Key": "3tF9JbZ7uLcN8WvX5qDfRgHkYrTpLjKx85tdhfvdd45f",
     "Issuer": "ForumApp",
     "Audience": "ForumApp"
   }
